# Phantom

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  Cargo.toml  Directory.Build.props  Phantom.sln  README.md
.github/workflows/: build.yml  rust.yml
Phantom.Client/: Phantom.Client.vcxproj
Phantom.Client.Tests/: Phantom.Client.Tests.vcxproj
Phantom.Client/include/client/entities/: entity_manager.h
Phantom.Client/include/client/game/: game_state.h  script_thread.h
Phantom.Client/include/client/net/: network_client.h
Phantom.Client/include/client/overlay/: cef_overlay.h  i_overlay.h  ultralight_overlay.h
Phantom.Client/src/: dllmain.cpp
Phantom.Client/src/entities/: entity_manager.cpp
Phantom.Client/src/game/: game_state.cpp  script_thread.cpp
Phantom.Client/src/net/: network_client.cpp
Phantom.Client/src/overlay/: cef_overlay.cpp  ultralight_overlay.cpp
Phantom.Client/ui/: index.html
Phantom.Hook/: Phantom.Hook.vcxproj
Phantom.Hook.Tests/: Phantom.Hook.Tests.vcxproj  test_memory.cpp  test_pattern_scan.cpp  test_vmt_hook.cpp
Phantom.Hook/include/hook/: crossmap.h  d3d11_hook.h  detours_hook.h  fiber.h  input.h  memory.h  natives.h  pattern_scan.h  scoped_handle.h  vmt_hook.h
Phantom.Hook/src/: d3d11_hook.cpp  detours_hook.cpp  fiber.cpp  input.cpp  memory.cpp  natives.cpp  pattern_scan.cpp  vmt_hook.cpp
Phantom.Launcher/: Phantom.Launcher.vcxproj
Phantom.Launcher.Tests/: Phantom.Launcher.Tests.vcxproj  test_process_finder.cpp  test_registry_helper.cpp
Phantom.Launcher/include/launcher/: injector.h  process_finder.h  registry_helper.h  registry_storage.h
Phantom.Launcher/src/: injector.cpp  main.cpp  process_finder.cpp  registry_helper.cpp  registry_storage.cpp
Phantom.Shared/: Phantom.Shared.vcxproj
Phantom.Shared/include/shared/: constants.h  entity_types.h  messages.fbs  scoped_handle.h
Phantom.Shared/src/: entity_types.cpp
client/: Cargo.toml
client/src/: cleanup.rs  entities.rs  imgui.rs  lib.rs  menu.rs  network.rs  thread_jumper.rs  ui.rs
docs/superpowers/plans/: 2026-04-10-cpp26-migration.md
docs/superpowers/specs/: 2026-04-10-cpp26-migration-design.md
hook/: Cargo.toml
hook/src/: d3drenderer.rs  keyboard.rs  lib.rs  memory.rs  native_handling.rs  replay_interface.rs  script_patches.rs
launcher/: Cargo.toml
launcher/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  router.rs  session.rs  sync.rs
shared/: Cargo.toml
shared/src/: lib.rs
