[package]
name = "client"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
fern = "0.6"
glam = "0.29"
hecs = "0.10"
hook = { path = "../hook" }
log = "0.4"
serde_json = "1.0"
shared = { path = "../shared" }
tungstenite = "0.24"
winapi = "0.3"
winreg = "0.52"
