[package]
name = "hook"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5.6"
keycodes = "0.1.0"
log = "0.4.14"
once_cell = "1.7.2"
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "winbase", "timeapi", "dxgi", "d3d11", "winuser"] }
retour = { version = "0.3", features = ["static-detour"] }

[build-dependencies]
cpp_build = "0.5"
