[package]
name = "hook"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2024"
build = "build.rs"

[dependencies]
cpp = "0.5.9"
keycodes = "0.1.0"
log = "0.4"
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "winbase", "timeapi", "dxgi", "d3d11", "winuser"] }
retour = { version = "0.3", features = ["static-detour"] }

[build-dependencies]
cpp_build = "0.5"
