[package]
name = "launcher"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.8.0"
winapi = { version = "0.3", features = ["winuser", "memoryapi", "libloaderapi", "processthreadsapi"] }
sysinfo = "0.17.2"
