[package]
name = "server"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2024"

[dependencies]
chrono = "0.4"
env_logger = "0.11"
futures-util = "0.3"
glam = { version = "0.29", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
