[package]
name = "shared"
version = "0.1.0"
authors = ["Alexander Serdyuk <sankyago.js@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bincode = "1.3"
log = "0.4.14"
serde = "1.0.125"